[project]
name = "havochelp"
version = "0.2.0"
description = "AI-powered disaster damage assessment and emergency response coordination system using drone imagery and OpenAI Vision"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["disaster", "drone", "ai", "django", "emergency-response", "damage-assessment"]
dependencies = [
    "django>=5.2",
    "gunicorn>=23.0",
    "matplotlib>=3.10",
    "openai>=1.60",
    "opencv-python>=4.11",
    "pillow>=11.1",
    "redis>=5.2",
    "requests>=2.32",
    "setuptools>=75",
    "simplification>=0.7.13",
]
